--- a/001.HTML 학습/01.Info_PJ/css/style.css
+++ b/001.HTML 학습/01.Info_PJ/css/style.css
@@ -54,10 +54,10 @@ nav img {
 
 /* 2. 메인영역 */
 main {
-    widows: 727px;
+    width: 727px;
     margin: 0 auto;
     /* 마영호! */
-    text-align: center;
+    /* text-align: center; */
     /* 인라인요소 중앙정렬 */
 }
 
