--- a/001.HTML 학습/01.Info_PJ/css/style.css
+++ b/001.HTML 학습/01.Info_PJ/css/style.css
@@ -3,16 +3,7 @@
 이것이전엔 아무것도 쓰면 안된다!! */
 
 /* 1. 상단영역 */
-#top {}
-
-/* 상단영역과 하단영역에 보더 넣기 */
-/* 선택자를 콤마(,)로 연걸->그룹선택자 */
-#top,
-#info {
-    border: 1px solid silver;
-    /* border: 두께 종류 색상; (두종색)
-                박스의 테두리 속성
-                */
+#top {
     text-align: center;
     /* 텍스트 중앙정렬 */
     width: 727px;
@@ -31,14 +22,29 @@
 
     /* 배경색넣기 */
     background-color: #f5db9b;
+
+    /* 상단영역과 하단영역에 보더 넣기 */
+    /* 선택자를 콤마(,)로 연걸->그룹선택자 */
+
+}
+
+#top,
+#info {
+    border: 1px solid silver;
+    /* border: 두께 종류 색상; (두종색)
+                박스의 테두리 속성
+                */
 }
 
 /* 속성선택자[] */
 /* =정확히 일치 */
-/* ^=시작하는 문자 */
-/* $=끝나는 문자 */
-/* *=내용중 문자 */
 /* [href="722"]{} */
+/* ^=시작하는 문자 */
+/* [href^="722"]{} */
+/* $=끝나는 문자 */
+/* [href$="722"]{} */
+/* *=내용중 문자 */
+/* [href*="722"]{} */
 [href^="http"] {
     color: #222;
     text-decoration: none;
@@ -72,9 +78,10 @@
 /* 랭킹뉴스에 사이 구분선 넣기 */
 /* 선택자~선택자 : 앞의 선택자 뒤의 형제요소 모두선택 */
 /* ~(틸드) 다중형제선택자 */
-.rnews li:first-child~li{
+.rnews li:first-child~li {
     border-top: 4px dashed green;
 }
+
 /* 큰제목 */
 #top h1 {
     color: #00e7e7;
