--- a/03.DKB_PJ/css/main.css
+++ b/03.DKB_PJ/css/main.css
@@ -37,20 +37,25 @@ height값을 설정하지 않으면
 
 /* 전체배경넣기 */
 body {
+     /* 배경: 색이반고윙/크 */
+     background: 
+     url(../images/bg_mainvisual.jpg); no-repeat fixed 10% 30%.10%,
+     url(../images/bg_mainvisual.jpg); no-repeat fixed center/cover;
+     /* 첫번째 배경이미지가 위! 10% 30% 위치값 슬래쉬(/)뒤가 가로크기 10% */
     /* 1.배경색 */
-    background-color: #b3b3b3;
+    /* background-color: #b3b3b3; */
     /* 2.배경이미지 */
-    background-image: url(../images/bg_mainvisual.jpg);
+    /* background-image: url(../images/bg_mainvisual.jpg); */
     /* 3.배경반복옵션 */
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     /* no-repeat반복없음
     repeat-x x축반복
     repeat-y y축반복 
     repeat반복(기본값)*/
     /* 4.배경고정(보이는 화면에 붙인다!) */
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     /* 5.배경위치: x축 y축 (기중은 )*/
-    background-position: center;
+    /* background-position: center; */
     /* background-position: 100px 200px; */
     /* 배경위치옵션은 수치값(px,%등),
     기준옵션값:
@@ -58,7 +63,7 @@ body {
     y축:top,center,bottom */
     /* 6.배경크기 : 가로크기, 세로크기/ 특정값*/
     /* background-size: 400px auto; */
-    background-size: cover;
+    /* background-size: cover; */
     /* cover를 쓰면 빈틈없이 배경을 요소에 채운다! */
 }
 
@@ -71,7 +76,54 @@ body {
 .cont {
     height: 800px;
 }
+/* 캐릭터박스 */
+#cbx{
+    width: 90%;
+    margin: 0 auto;
+    /* 마영오! - 블록가로중앙 */
+}
 
+/* 가상요소로 clear:both  */
+#cbx::after{
+    content: '';
+    /* 빈content속서은 마치 span 태그를 쓴것 같다~! */
+    display: block;
+    /* 블록 설정하는 순간 마치 div태그를 쓴것 같다~! */
+    clear: both;
+    /* 블록요소만 clear설정이 먹히므로 블록으로 만든다 */
+}
+
+/* 캐릭터박스 공통 */
+.cat{
+    /* 4등분 가로 크기%는?  25% */
+    width: 25%;
+    float: left;
+    /* 블록요소를 옆으로 흘러가게 하는 속성은?
+    float속성
+    ->left 값은 나는 왼쪽에 너는 오른쪽으로 올라와!
+    ->right 값은 나는 왼쪽에 너는 오른쪽으로 올라와!
+    [자식요소가 float 된 경우 부모요소는 높이값이 0?]
+    ->블록 자식요소 float으로 인해 부모요소가 높이값이 0인 경우
+    다음과 같이 해결할 수 있다!
+    1.부모요소에 overflow:hidden 설정
+    2.float 자식요소 중 마지막 요소에 float해제인 clear설정하기!
+        clear:left,clear:right, clear:border-width
+        float 값이 left 면 left,right면 right로 끊어줌!
+        both는 어떤 값이든 끊어줌 그래서 이것을 많이 씀
+        클리어보스 clear:both
+        ->실제 요소를 
+        소지가 큼! 따라서 가상요소로 셋팅함!
+        맨뒤 추가 가상요소는 ::after
+    */
+}
+
+
+/* 캐릭터 이미지 */
+.ci>img{
+    width: 100%;
+    /* 이미지는 가로나 세로중 하나만 설정하면
+    나머지는 자동으로 비율유지로 변경한다! */
+}
 /********* 3.하단영역 *********/
 .info {
     height: 240px;
