--- a/03.DKB_PJ/css/main.css
+++ b/03.DKB_PJ/css/main.css
@@ -60,8 +60,8 @@ height값을 설정하지 않으면
 body {
      /* 배경: 색이반고윙/크 */
      background: 
-     url(../images/bg_logo_a_01.png) no-repeat fixed 10% 30% 10%,
-     url(../images/bg_mainvisual.jpg)    no-repeat fixed center/cover;
+     url(../images/bg_logo_a_01.png) no-repeat fixed 10% 30%/10%,
+     url(../images/bg_mainvisual.jpg) no-repeat fixed center/cover;
      /* 첫번째 배경이미지가 위! 10% 30% 위치값 슬래쉬(/)뒤가 가로크기 10% */
     /* 1.배경색 */
     /* background-color: #b3b3b3; */
