--- a/02.Drama_PJ/css/drama.css
+++ b/02.Drama_PJ/css/drama.css
@@ -1,7 +1,12 @@
 @charset "utf-8";
-
 /* 한국최신드라마 리스트 css - drama.css */
 
+/* 웹폰트 */
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+
+/* 
+font-family: 'Nanum Gothic', sans-serif;
+*/
 /* 초기화 */
 html,body{
     margin: 0;
@@ -9,7 +14,8 @@ html,body{
 }
 /* 테이블공통 */
 .tbl{
-    font-family: "궁서","굴림";
+    font-family: 'Nanum Gothic', sans-serif;
+    /* font-family: "궁서","굴림"; */
     /* 글씨체 - 순서대로 있는 글씨체 적용 */
     color: #222;
     /* 글자색 */
@@ -76,6 +82,7 @@ div.gubun{
     width: 1000px;
     margin: 0 auto;
     /* 위의 테이블과 같은 사이즈 가로중앙정렬 */
+    margin-bottom: 100px;
 }
 /* 구분테이블 */
 table#gubun{
