--- a/03.DKB_PJ/css/media.css
+++ b/03.DKB_PJ/css/media.css
@@ -9,16 +9,16 @@
     하단링크박스, 오프닝텍스트,서브메뉴,*/
     .gnb,
     .blink,
-    .optxt .smenu 
-    .gnb>ul>li::after 
-    {
+    .optxt, 
+    .smenu, 
+    .gnb>ul>li::after {
         display: none;
     }
 
     /* 1-2.디스플레이 보임 - .ham */
     button.ham {
         display: block;
-        z-index: 99;
+        
     }
 
     /* 1-3. GNB변경하기 - gnb 에 클래스 on 을 추가하면 변경됨*/
@@ -42,13 +42,13 @@
     /* 1-5. 메뉴 a링크 */
     .gnb>ul>li>a {
         padding: 0 15px;
-        line-height: 40px;
+        line-height: 12.5vh;
         height: 40px;
         font-size: 4vh;
         }
     /* 1-6.메뉴 마우스 오버시 a링크 보더 없앰 */
-    .gnb>ul>li>a{
-        
+    .gnb>ul>li:hover>a{
+        border-bottom: none;
     }
     /* 2.상단영역 */
     .top {
@@ -59,6 +59,10 @@
     .cont {
         height: auto;
         padding-bottom: 50px;
+    }
+
+    #cbx{
+        margin-top: 50px;
     }
 
     .cbx {
@@ -76,7 +80,7 @@
 
     /* 캐릭터 설명 타이틀 */
     .cd h3 {
-        font-size: min(2vw, 30px);
+        font-size:7vw;
         padding: 1vw 1.7vw 0;
     }
 
