로봇 자리잡기

--- a/001.HTML 학습/04.Robot_PJ/css/robot.css
+++ b/001.HTML 학습/04.Robot_PJ/css/robot.css
@@ -15,6 +15,235 @@ body{
 }
 
 /* 공사중 아웃라인 */
-body *{
+/* body *{
     outline: 5px dashed lime;
+} */
+
+/* 로봇머리 */
+#head{
+    position: relative;
+    width: 250px;
+    height: 250px;
+    background: url(../images/metal01.jpg) no-repeat center/cover;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+/* 눈1 */
+#eye1{
+    position: absolute;
+    top: 50px;
+    right: 150px;
+    width: 50px;
+    height: 50px;
+    background: url(../images/e1.jpg) no-repeat 0/100% 100%;
+}
+#eye2{
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    /* 부모는? #head */
+    width: 50px;
+    height: 50px;
+    background: url(../images/e2.jpg) no-repeat 0/100% 100%;
+}
+#nose{
+    position: absolute;
+    top: 100px;
+    right: 100px;
+    /* 부모는? #head */
+    width: 50px;
+    height: 70px;
+    background: url(../images/nose.jpg) no-repeat 0/100% 100%;
+}
+#mouse{
+    position: absolute;
+    top: 170px;
+    right: 50px;
+    /* 부모는? #head */
+    width: 150px;
+    height: 70px;
+    background: url(../images/mouth.png) no-repeat 0/100% 100%;
+}
+
+.ear{
+    position: absolute;
+    top: 70px;
+    width: 50px;
+    height: 80px;
+    background: url(../images/metal02.jpg) no-repeat 0/100% 100%;
+
+}
+
+/* 귀1 */
+#ear1{
+    left: -50px;
+    border-radius: 10px 0 0 10px;
+}
+
+/* 귀2 */
+#ear2{
+    right: -50px;
+    border-right: 0 20px 20px 0;
+}
+
+/* 로봇몸 */
+#body{
+    position: relative;
+    /* 부모자격 */
+    width: 250px;
+    height: 300px;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 300px;
+    /* 다리가 내려간 만큼 하단여유공간확보! */
+    background: url(../images/metal01.jpg) no-repeat center/cover;
+}
+
+/* 목 */
+#neck{
+    position: absolute;
+    top: -45px;
+    left: 103px;
+    width: 50px;
+    height: 50px;
+    background: url(../images/metal02.jpg) no-repeat 0/100% 100%;
+}
+
+/* 팔,다리공통 */
+.part{
+    position: absolute;
+    width: 50px;
+    height: 250px;
+    background: url(../images/metal02.jpg) repeat-y 0/100%;
+}
+/* 왼팔 */
+#arm1{
+    left: -50px;
+}
+/* 오른팔 */
+#arm2{
+    right: -50px;
+}
+/* 왼다리 */
+#leg1{
+    top: 100%;
+    left: 50px;
+}
+/* 오른다리 */
+#leg2{
+    top: 100%;
+    right: 50px;
+}
+
+/* 어깨공통 */
+.sh{
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    background: url(../images/metal01.jpg) no-repeat center/cover;
+}
+/* 왼쪽어깨 */
+#sh1{
+    top: -10px;
+    left: -80px;
+    border-radius: 30px 0 0 30px;
+}
+#sh2{
+    top: -10px;
+    left: 250px;
+    border-radius:  0 30px 30px 0;
+}
+
+/* TV */
+#tv{
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    /* 부모는? #body */
+    width: 200px;
+    height: 150px;
+    background: url(../images/tv.jpg) no-repeat 0/100% 100%;
+
+}
+/* 스크린 */
+#screen{
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* 부모는? #tv */
+    width: 50px;
+    height: 50px;
+    background-color: #000;
+}
+
+/* 유튜브 아이프레임 */
+#screen iframe{
+    position: absolute;
+    top: 3px;
+    left: 11px;
+    width: 350%;
+    height: 300%;
+}
+
+/* 로봇설명박스 */
+#dcbx{
+    width: 800px;
+    margin: 0 auto;
+    /* 마영오 */
+    border: ;
+    border-radius: 20px;
+    padding: 15px 30px;
+    /* 페딩:위아래 양쪽 */
+    background-color: rgba(0, 0, 0, 0.412);
+    /* 반투명 검정배경 */
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    /* 글자그림자:x y 블러 색 */
+    box-shadow: inset 0 0 60px cyan;
+    /* 박스그림자:내부x y 블러 (크기) 색 */
+
+}
+/* 로봇설명 제목 */
+#dcbx h2{
+    position: sticky;
+    top: 0;
+    font-size: 35px;
+    text-align: center;
+    color: lime;
+    background-color: #e25252;
+}
+/* 설명출처 */
+#dcbx small{
+    text-align: center;
+    display: block;
+    /* 텍스트 중앙정렬위해 */
+    color: #ff0;
+
+}
+/* 설명문단 */
+#dcbx p{
+    font-size: 15px;
+    /* 기본글자크기 16px */
+    line-height: 1.8;
+    /* 줄간격:배수/단위 등 */
+    letter-spacing: 1px;
+    /* 자간 */
+    word-spacing: 2px;
+    /* 단어간격 */
+
+    /* 가독성을 위한 다단설정 */
+    /* 다단표기(다중열속성) */
+    column-count: 3;
+    /* 다중열개수 */
+    column-rule: 5px dotted lime;
+    /* 다중열구분선 - 값은 보더와 같다(두께 종류 색상) */
+    column-gap: 55px;
+    /* 다중열 사이간격 - 구분선 오른쪽 간격조정 */
+    text-align: justify;
+    /* 양쪽정렬 -  양쪽 끝 라인을 맞춤!*/
+    word-break: break-all;
+    /* 단어깨기!-단어단위를 한글자씩 깨준다!
+    양쪽 정렬시 사용하면 보기 좋아진다! */
+    text-indent: 20px;
+    /* 첫줄 들여쓰기(마이너스값을 쓰면 내어쓰기임) */
 }
